--- a/wiki/ServiceStackWebServices.wiki
+++ b/wiki/ServiceStackWebServices.wiki
@@ -75,8 +75,8 @@ TypeSerializer was developed from experience taking the best features of seriali
   * Non-invasive and configuration-free 
   * Resilient to schema changes (focused on deserializing as much as possible without error)
   * Serializes / De-serializes any .NET data type (by convention) 
-    * Supports custom, compact serialization of structs by overriding ToString() and static T Parse(string) methods 
+    * Supports custom, compact serialization of structs by overriding `ToString()` and `static T Parse(string)` methods 
     * Can serialize inherited, interface or 'late-bound objects' data types 
-    * Respects opt-in DataMember custom serialization for DataContract DTO types.
+    * Respects opt-in `DataMember` custom serialization for `DataContract` DTO types.
 
 For these reasons it is the preferred choice to transparently store complex POCO types for OrmLite (in text blobs), POCO objects with [http://code.google.com/p/servicestack/wiki/ServiceStackRedis Service Stack's C# Redis Client] or the optimal serialization format in .NET to .NET web services.
