--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -1,5 +1,7 @@
 #labels Featured,CSharp,Compact,TextSerializer,Resilient,Fast
-The fastest and most compact text-based serializer for .NET.
+The fastest and most compact text-based serializer for .NET. 
+For more info on its JSV Format check out the [http://www.servicestack.net/mythz_blog/?p=176 introductory blog post].
+
 
 = Introduction =
 
@@ -22,8 +24,6 @@ These characteristics make it ideal for use anywhere you need to store or transp
 As such, it's utilized within ServiceStack's other components:
   * OrmLite - to store complex types on table models as text blobs in a database field and 
   * [ServiceStackRedis ServiceStack.Redis] - to store rich POCO data types into the very fast [http://code.google.com/p/redis redis] instances.
-
-More information on the new JSV Format can be found at the [http://www.servicestack.net/mythz_blog/?p=176 introductory blog post].
 
 = Download =
 TypeSerializer is included with [http://servicestack.googlecode.com/files/ServiceStack.zip ServiceStack.zip] or available to download separately in a standalone  [http://servicestack.googlecode.com/files/ServiceStack.Text.dll ServiceStack.Text.dll].
