--- a/wiki/TypeSerializer.wiki
+++ b/wiki/TypeSerializer.wiki
@@ -1,6 +1,6 @@
 #labels Featured,CSharp,Compact,TextSerializer,Resilient,Fast
-The fastest and most compact text-based serializer for .NET. 
-For more info on its JSV Format check out the [http://www.servicestack.net/mythz_blog/?p=176 introductory blog post].
+The fastest and most compact text-based serializer for .NET - 
+more info on its JSV Format is on the [http://www.servicestack.net/mythz_blog/?p=176 introductory blog post].
 
 
 = Introduction =
