--- a/wiki/IRedisClient.wiki
+++ b/wiki/IRedisClient.wiki
@@ -111,10 +111,10 @@ public interface IRedisClient
 	bool AddToSortedSet(string setId, string value);
 	bool AddToSortedSet(string setId, string value, double score);
 	double RemoveFromSortedSet(string setId, string value);
-	string PopFromSortedSetItemWithLowestScore(string setId);
-	string PopFromSortedSetItemWithHighestScore(string setId);
+	string PopItemWithLowestScoreFromSortedSet(string setId);
+	string PopItemWithHighestScoreFromSortedSet(string setId);
 	bool SortedSetContainsValue(string setId, string value);
-	double IncrementItemInSortedSet(string setId, double incrementBy, string value);
+	double IncrementItemInSortedSet(string setId, string value, double incrementBy);
 	int GetItemIndexInSortedSet(string setId, string value);
 	int GetItemIndexInSortedSetDesc(string setId, string value);
 	List<string> GetAllFromSortedSet(string setId);
@@ -151,7 +151,11 @@ public interface IRedisClient
 
 	#region Hash operations
 
+	bool HashContainsKey(string hashId, string key);
 	bool SetItemInHash(string hashId, string key, string value);
+	bool SetItemInHashIfNotExists(string hashId, string key, string value);
+	void SetRangeInHash(string hashId, IEnumerable<KeyValuePair<string, string>> keyValuePairs);
+	int IncrementItemInHash(string hashId, string key, int incrementBy);
 	string GetItemFromHash(string hashId, string key);
 	bool RemoveFromHash(string hashId, string key);
 	int GetHashCount(string hashId);
@@ -161,7 +165,6 @@ public interface IRedisClient
 
 	#endregion
 }
-
 
 }}}
 
