--- a/wiki/RedisClientReleaseNotes.wiki
+++ b/wiki/RedisClientReleaseNotes.wiki
@@ -6,7 +6,7 @@ This release brings the client up to date with v1.3.9 of the redis-server with t
   * [http://code.google.com/p/redis/wiki/HincrbyCommand HINCRBY]
   * [http://code.google.com/p/redis/wiki/HmsetCommand HMSET]
   * [http://code.google.com/p/redis/wiki/HsetnxCommand HSETNX] (only available in redis trunk)
-You can access these new operations with the IRedisClient using the [http://code.google.com/p/servicestack/wiki/RedisWindowsDownload latest Windows build of redis-server] (currently v1.3.9).
+You can access these new operations with the IRedisClient using the latest Windows build of redis-server.
 
 Richer Transaction support has been improved with the addition of the [IRedisTypedTransaction IRedisTypedTransaction<T>] which utilizes the [IRedisTypedClient] to provide transactions against strongly-typed POCO types. Examples can be found on the test page [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Generic/RedisTypedTransactionTests.cs RedisTypedTransactionTests.cs]
 
@@ -16,7 +16,7 @@ The latest version of the open source c# redis client is available:
   * Or bundled inside the core Service Stack binaries - http://servicestack.googlecode.com/files/ServiceStack.zip
 
 Download the stable and development release of the Redis Server Windows builds here:
-http://code.google.com/p/servicestack/wiki/RedisWindowsDownload
+http://code.google.com/p/servicestack/wiki/RedisWindowsDownload (currently v1.3.9)
 
 
 = Redis Client v1.09 Release Notes =
