--- a/wiki/DesigningNoSqlDatabase.wiki
+++ b/wiki/DesigningNoSqlDatabase.wiki
@@ -2,7 +2,7 @@ This page illustrates a good solution on how to design a simple Blog application
 
 = Introduction =
 
-Oren from the popular .NET blog ayende.com/Blog/, is putting together a series of blogs explaining how to approach designing a NoSQL database. Although he's using his RavenDB as a reference implementation, the example applies equally well to Redis and other NoSQL variants.
+Oren from the popular .NET blog http://ayende.com/Blog/, is putting together a series of blogs explaining how to approach designing a NoSQL database. Although he's using his RavenDB as a reference implementation, the example applies equally well to Redis and other NoSQL variants.
 
 Where possible I will be showing how you can use the advanced features in Redis and the [ServiceStackRedis C# Redis Client] to provide simple, fast and effective solutions. The entire source code for this example is available at [http://code.google.com/p/servicestack/source/browse/trunk/Common/ServiceStack.Redis/ServiceStack.Redis.Tests/Examples/BlogPostExample.cs BlogPostExample.cs] 
 
